<resources>
    <string name="app_name">Smart Bell</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome_heading">Smart Bell</string>
    <string name="welcome_body">We will have you to protect your house with online services!</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_we_work">How We Work?</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_user_name">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_password_signup">Password</string>
    <string name="regis">Regis</string>
    <string name="back_login">Back to Login</string>
    <string name="about_us">About Us</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="send_email">Send Email</string>
    <string name="take_photo">Take a Photo</string>
    <string name="logo_name">Show Yourself</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="slogan_name">Everything your house need is here!</string>
    <string name="back_home">Back Home</string>
    <string name="add_face">Add New Face</string>
    <string name="accept">Accept</string>
</resources>